# gumroad-cli

./: Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/client/: custom_fields.rs  licenses.rs  mod.rs  offer_codes.rs  payouts.rs  products.rs  resource_subscriptions.rs  sales.rs  skus.rs  subscribers.rs  user.rs  variant_categories.rs  variants.rs
src/commands/: auth.rs  custom_fields.rs  licenses.rs  mod.rs  offer_codes.rs  payouts.rs  products.rs  resource_subscriptions.rs  sales.rs  skus.rs  subscribers.rs  user.rs  variant_categories.rs  variants.rs
src/models/: custom_field.rs  license.rs  mod.rs  offer_code.rs  payout.rs  product.rs  resource_subscription.rs  sale.rs  sku.rs  subscriber.rs  user.rs  variant.rs  variant_category.rs
