[package]
name = "gumroad"
version = "0.1.0"
edition = "2024"
description = "A CLI for the Gumroad API v2"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
